--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,3 +14,15 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build ./app --file ./app/Dockerfile --tag my-image-name:$(date +%s)
+
+  Push:
+
+    runs-on: ubuntu-latest
+
+    steps:
+     -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
