--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         context: ./app
         push: true
-        tags: user/app:latest
+        tags: hustlerhimanshu/app:latest
