--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,24 +12,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    # - name: Build the Docker image
-    #   run: docker build ./app --file ./app/Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build the Docker image
+      run: docker build ./app --file ./app/Dockerfile --tag my-image-name:$(date +%s)
 
  
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ vars.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
     # -
+    #   name: Login to Docker Hub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ vars.DOCKERHUB_USERNAME }}
+    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # # -
     #     name: Set up Docker Buildx
     #     uses: docker/setup-buildx-action@v3 
 
-    -
-      name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: ./app
-        push: true
-        tags: hustlerhimanshu/app:latest
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:v1
