--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build ./app --file ./app/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build ./app --file ./app/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/myapp:v1
 
  
     # -
