--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build ./app --file ./app/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/myapp:v1
+      run: docker build ./app --file ./app/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1
 
  
     # -
@@ -27,4 +27,4 @@ jobs:
     #     uses: docker/setup-buildx-action@v3 
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:v1
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1
