--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build ./app --file ./app/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1
+      run: docker build ./app --file ./app/Dockerfile --tag ${{ vars.DOCKERHUB_USERNAME }}/myapp:v1
 
  
     # -
