--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,15 +16,13 @@ jobs:
       run: docker build ./app --file ./app/Dockerfile --tag ${{ vars.DOCKERHUB_USERNAME }}/myapp:v1
 
  
-    # -
-    #   name: Login to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ vars.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # # -
-    #     name: Set up Docker Buildx
-    #     uses: docker/setup-buildx-action@v3 
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
 
     - name: Push Docker image
       run: docker push ${{ vars.DOCKERHUB_USERNAME }}/myapp:v1
